openGL render renders transparent with alpha set to Sky in the Render/Shading menu #43953

Closed
opened 2015-03-10 15:18:22 +01:00 by Titus Fehr · 9 comments

System Information
Operating system and graphics card
Win8.1 / Intel i7 3770 CPU 3.40GHz 64bit

Blender Version
Broken: 2.73.9 ed5df50 Testbuild
Worked: (optional)

Short description of error
2.73 official release: Rendering Grease Pencil strokes with alpha set to Sky in the Render/Shading panel renders the picture with background color of the World/Sky
2.73-9 Testbuild: Rendering the same gives me a transparent (gray checkerboard) background.

Exact steps for others to reproduce the error
draw grease pencil strokes in cam view, in empty file
set alpha mode to Sky (Render/Sky panel or Render / OpenGL Render Options /Alpha mode)
Render OpenGl

**System Information** Operating system and graphics card Win8.1 / Intel i7 3770 CPU 3.40GHz 64bit **Blender Version** Broken: 2.73.9 ed5df50 Testbuild Worked: (optional) **Short description of error** 2.73 official release: Rendering Grease Pencil strokes with alpha set to Sky in the Render/Shading panel renders the picture with background color of the World/Sky 2.73-9 Testbuild: Rendering the same gives me a transparent (gray checkerboard) background. **Exact steps for others to reproduce the error** draw grease pencil strokes in cam view, in empty file set alpha mode to Sky (Render/Sky panel or Render / OpenGL Render Options /Alpha mode) Render OpenGl
Author

Changed status to: 'Open'

Changed status to: 'Open'
Titus Fehr self-assigned this 2015-03-10 15:18:22 +01:00
Author

Added subscriber: @TitusFehr-2

Added subscriber: @TitusFehr-2

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This has been changed to take the "World Background" option into account.

This has been changed to take the "World Background" option into account.

Actually, scratch that, we'll make it work like used to.

Actually, scratch that, we'll make it work like used to.

This issue was referenced by 56c0a3faef

This issue was referenced by 56c0a3faef74658fec4769d986253023958e6c36

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Closed by commit 56c0a3faef.

Closed by commit 56c0a3faef.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43953
No description provided.