Fix T43953, make opengl render work like before, basically, if we render transparent, it will render sky/transparent, regardless of the "show world setting".