source/blender/editors/include/UI_resources.h
@@ -361,6 +361,9 @@ void    UI_GetColorPtrBlendShade3ubv(const unsigned char cp1[3], const unsigned 
 // clear the openGL ClearColor using the input colorid
 void    UI_ThemeClearColor(int colorid);
 
+// clear the openGL ClearColor using the input colorid using optional transparency
+void    UI_ThemeClearColorAlpha(int colorid, float alpha);
+
 // internal (blender) usage only, for init and set active
 void    UI_SetTheme(int spacetype, int regionid);
 
