source/blender/editors/interface/resources.c
@@ -1531,6 +1531,14 @@ void UI_ThemeClearColor(int colorid)
 	glClearColor(col[0], col[1], col[2], 0.0f);
 }
 
+void UI_ThemeClearColorAlpha(int colorid, float alpha)
+{
+	float col[3];
+	UI_GetThemeColor3fv(colorid, col);
+	glClearColor(col[0], col[1], col[2], alpha);
+}
+
+
 int UI_ThemeMenuShadowWidth(void)
 {
 	bTheme *btheme = UI_GetTheme();
